--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&display=swap" rel="stylesheet">
 </head>
-<body background="np_file_51960.png">
+<body background="np_file_51960.jpg">
 
 <h1 id="header" style="color:whitesmoke"><b>COVID counter</b></h1>
 <div id="lol">
